k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: springboot-demo
  namespace: jenkins

spec:

  replicas: 2

  selector:
    matchLabels:
      app: springboot-demo

  template:

    metadata:
      labels:
        app: springboot-demo

    spec:

      containers:

      - name: springboot-demo

        image: balu9963/springboot-demo:latest

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"

          limits:
            cpu: "500m"
            memory: "1Gi"
