k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: springboot-demo-service
  namespace: jenkins

spec:

  selector:
    app: springboot-demo

  ports:

  - port: 80
    targetPort: 8080

  type: ClusterIP
