k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: springboot-demo-ingress
  namespace: jenkins

spec:

  ingressClassName: nginx

  rules:

  - host: springboot.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: springboot-demo-service

            port:

              number: 80
